// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildInflationCategoryWorkbookExportModel > builds a stable model for a fixed input > contrib 1`] = `
{
  "analysis": {
    "headers": [
      "წელი",
      "თვე",
      "კატეგორია",
      "COICOP კოდი",
      "დონე",
      "წონა (%)",
      "მნიშვნელობა",
      "ერთეული",
      "სტატუსი",
    ],
    "numericFormats": {
      "6": "0.0%",
      "7": "0.00",
    },
    "rows": [
      [
        2026,
        8,
        "სურსათი და უალკოჰოლო სასმელები",
        "01",
        2,
        0.336,
        1.68672,
        "პპ",
        "გამოთვლილი",
      ],
      [
        2026,
        8,
        "საცხოვრებელი სახლი, წყალი, ელექტროენერგია, აირი და სათბობის სხვა სახეები",
        "04",
        2,
        0.09699999999999999,
        0.8215899999999999,
        "პპ",
        "გამოთვლილი",
      ],
      [
        2026,
        8,
        "ტრანსპორტი",
        "07",
        2,
        0.114,
        1.7328,
        "პპ",
        "გამოთვლილი",
      ],
      [
        2026,
        8,
        "დანარჩენი",
        "",
        "",
        null,
        1.4088900000000004,
        "პპ",
        "გამოთვლილი",
      ],
    ],
  },
  "filename": "fiscal-inflation-categories-contrib-2026-08-2026-08.xlsx",
  "locale": "ka",
  "readable": {
    "fitSubtitle": true,
    "headerLabels": {
      "category": "სერია — წელი",
      "columns": [
        "იანვარი",
        "თებერვალი",
        "მარტი",
        "აპრილი",
        "მაისი",
        "ივნისი",
        "ივლისი",
        "აგვისტო",
        "სექტემბერი",
        "ოქტომბერი",
        "ნოემბერი",
        "დეკემბერი",
      ],
    },
    "numberFormat": "+0.0;−0.0;0.0",
    "rows": [
      {
        "basisByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": "published",
          "9": null,
        },
        "change": null,
        "kind": "item",
        "label": "2026",
        "parentLabel": "სურსათი და უალკოჰოლო სასმელები",
        "valuesByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": 1.68672,
          "9": null,
        },
      },
      {
        "basisByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": "published",
          "9": null,
        },
        "change": null,
        "kind": "item",
        "label": "2026",
        "parentLabel": "საცხოვრებელი სახლი, წყალი, ელექტროენერგია, აირი და სათბობის სხვა სახეები",
        "valuesByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": 0.8215899999999999,
          "9": null,
        },
      },
      {
        "basisByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": "published",
          "9": null,
        },
        "change": null,
        "kind": "item",
        "label": "2026",
        "parentLabel": "ტრანსპორტი",
        "valuesByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": 1.7328,
          "9": null,
        },
      },
      {
        "basisByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": "published",
          "9": null,
        },
        "change": null,
        "kind": "item",
        "label": "2026",
        "parentLabel": "დანარჩენი",
        "valuesByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": 1.4088900000000004,
          "9": null,
        },
      },
    ],
    "showChangeColumn": false,
    "subtitle": "აგვისტო 2026 – აგვისტო 2026 · პპ · წვლილი წლიურ ინფლაციაში · წვლილი გამოთვლილია Fiscal.ge-ის მიერ საქსტატის გამოქვეყნებული ფასების ცვლილებისა და სამომხმარებლო კალათის წონების საფუძველზე. წვლილი = თვის წლის კალათის წონა ÷ 100 × წლიური ფასის ცვლილება (პპ).",
    "title": "წვლილი ინფლაციაში",
    "unitLabel": "პპ · წვლილი წლიურ ინფლაციაში",
    "years": [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
    ],
  },
  "sheetNames": [
    "მარტივი ცხრილი",
    "მონაცემები",
    "წყაროები",
  ],
  "sourceYears": [
    2026,
  ],
  "sources": [
    {
      "absoluteUrl": "https://fiscal.ge/downloads/methodology/inflation/files/ka/source.geostat_cpi_yoy.xlsx",
      "downloadHref": "/downloads/methodology/inflation/files/ka/source.geostat_cpi_yoy.xlsx",
      "language": "ka",
      "organization": "Geostat",
      "retrievedAt": "2026-09-12",
      "sourceId": "source.geostat_cpi_yoy",
      "title": "source.geostat_cpi_yoy ka",
      "years": [
        2026,
      ],
    },
    {
      "absoluteUrl": "https://fiscal.ge/downloads/methodology/inflation/files/ka/source.geostat_basket_weights.xlsx",
      "downloadHref": "/downloads/methodology/inflation/files/ka/source.geostat_basket_weights.xlsx",
      "language": "ka",
      "organization": "Geostat",
      "retrievedAt": "2026-09-12",
      "sourceId": "source.geostat_basket_weights",
      "title": "source.geostat_basket_weights ka",
      "years": [
        2026,
      ],
    },
  ],
}
`;

exports[`buildInflationCategoryWorkbookExportModel > builds a stable model for a fixed input > mom 1`] = `
{
  "analysis": {
    "headers": [
      "წელი",
      "თვე",
      "კატეგორია",
      "COICOP კოდი",
      "დონე",
      "წონა (%)",
      "მნიშვნელობა",
      "ერთეული",
      "სტატუსი",
    ],
    "numericFormats": {
      "6": "0.0%",
      "7": "0.00%",
    },
    "rows": [
      [
        2026,
        8,
        "სურსათი და უალკოჰოლო სასმელები",
        "01",
        2,
        0.336,
        0.004,
        "%",
        "გამოქვეყნებული",
      ],
      [
        2026,
        8,
        "ტრანსპორტი",
        "07",
        2,
        0.114,
        0.009000000000000001,
        "%",
        "გამოქვეყნებული",
      ],
    ],
  },
  "filename": "fiscal-inflation-categories-mom-2026-08-2026-08.xlsx",
  "locale": "ka",
  "readable": {
    "headerLabels": {
      "category": "სერია — წელი",
      "columns": [
        "იანვარი",
        "თებერვალი",
        "მარტი",
        "აპრილი",
        "მაისი",
        "ივნისი",
        "ივლისი",
        "აგვისტო",
        "სექტემბერი",
        "ოქტომბერი",
        "ნოემბერი",
        "დეკემბერი",
      ],
    },
    "numberFormat": "0.0%",
    "rows": [
      {
        "basisByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": "published",
          "9": null,
        },
        "change": null,
        "kind": "item",
        "label": "2026",
        "parentLabel": "სურსათი და უალკოჰოლო სასმელები",
        "valuesByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": 0.004,
          "9": null,
        },
      },
      {
        "basisByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": "published",
          "9": null,
        },
        "change": null,
        "kind": "item",
        "label": "2026",
        "parentLabel": "ტრანსპორტი",
        "valuesByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": 0.009000000000000001,
          "9": null,
        },
      },
    ],
    "showChangeColumn": false,
    "subtitle": "აგვისტო 2026 – აგვისტო 2026 · % · წინა თვესთან შედარებით",
    "title": "თვიური ინფლაცია",
    "unitLabel": "% · წინა თვესთან შედარებით",
    "years": [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
    ],
  },
  "sheetNames": [
    "მარტივი ცხრილი",
    "მონაცემები",
    "წყაროები",
  ],
  "sourceYears": [
    2026,
  ],
  "sources": [
    {
      "absoluteUrl": "https://fiscal.ge/downloads/methodology/inflation/files/ka/source.geostat_cpi_mom.xlsx",
      "downloadHref": "/downloads/methodology/inflation/files/ka/source.geostat_cpi_mom.xlsx",
      "language": "ka",
      "organization": "Geostat",
      "retrievedAt": "2026-09-12",
      "sourceId": "source.geostat_cpi_mom",
      "title": "source.geostat_cpi_mom ka",
      "years": [
        2026,
      ],
    },
  ],
}
`;

exports[`buildInflationCategoryWorkbookExportModel > builds a stable model for a fixed input > yoy 1`] = `
{
  "analysis": {
    "headers": [
      "წელი",
      "თვე",
      "კატეგორია",
      "COICOP კოდი",
      "დონე",
      "წონა (%)",
      "მნიშვნელობა",
      "ერთეული",
      "სტატუსი",
    ],
    "numericFormats": {
      "6": "0.0%",
      "7": "0.00%",
    },
    "rows": [
      [
        2026,
        8,
        "სურსათი და უალკოჰოლო სასმელები",
        "01",
        2,
        0.336,
        0.050199999999999995,
        "%",
        "გამოქვეყნებული",
      ],
      [
        2026,
        8,
        "საცხოვრებელი სახლი, წყალი, ელექტროენერგია, აირი და სათბობის სხვა სახეები",
        "04",
        2,
        0.09699999999999999,
        0.08470000000000001,
        "%",
        "გამოქვეყნებული",
      ],
      [
        2026,
        8,
        "ტრანსპორტი",
        "07",
        2,
        0.114,
        0.152,
        "%",
        "გამოქვეყნებული",
      ],
    ],
  },
  "filename": "fiscal-inflation-categories-yoy-2026-08-2026-08.xlsx",
  "locale": "ka",
  "readable": {
    "headerLabels": {
      "category": "სერია — წელი",
      "columns": [
        "იანვარი",
        "თებერვალი",
        "მარტი",
        "აპრილი",
        "მაისი",
        "ივნისი",
        "ივლისი",
        "აგვისტო",
        "სექტემბერი",
        "ოქტომბერი",
        "ნოემბერი",
        "დეკემბერი",
      ],
    },
    "numberFormat": "0.0%",
    "rows": [
      {
        "basisByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": "published",
          "9": null,
        },
        "change": null,
        "kind": "item",
        "label": "2026",
        "parentLabel": "სურსათი და უალკოჰოლო სასმელები",
        "valuesByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": 0.050199999999999995,
          "9": null,
        },
      },
      {
        "basisByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": "published",
          "9": null,
        },
        "change": null,
        "kind": "item",
        "label": "2026",
        "parentLabel": "საცხოვრებელი სახლი, წყალი, ელექტროენერგია, აირი და სათბობის სხვა სახეები",
        "valuesByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": 0.08470000000000001,
          "9": null,
        },
      },
      {
        "basisByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": "published",
          "9": null,
        },
        "change": null,
        "kind": "item",
        "label": "2026",
        "parentLabel": "ტრანსპორტი",
        "valuesByYear": {
          "1": null,
          "10": null,
          "11": null,
          "12": null,
          "2": null,
          "3": null,
          "4": null,
          "5": null,
          "6": null,
          "7": null,
          "8": 0.152,
          "9": null,
        },
      },
    ],
    "showChangeColumn": false,
    "subtitle": "აგვისტო 2026 – აგვისტო 2026 · % · წინა წლის შესაბამის თვესთან შედარებით",
    "title": "წლიური ინფლაცია",
    "unitLabel": "% · წინა წლის შესაბამის თვესთან შედარებით",
    "years": [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
    ],
  },
  "sheetNames": [
    "მარტივი ცხრილი",
    "მონაცემები",
    "წყაროები",
  ],
  "sourceYears": [
    2026,
  ],
  "sources": [
    {
      "absoluteUrl": "https://fiscal.ge/downloads/methodology/inflation/files/ka/source.geostat_cpi_yoy.xlsx",
      "downloadHref": "/downloads/methodology/inflation/files/ka/source.geostat_cpi_yoy.xlsx",
      "language": "ka",
      "organization": "Geostat",
      "retrievedAt": "2026-09-12",
      "sourceId": "source.geostat_cpi_yoy",
      "title": "source.geostat_cpi_yoy ka",
      "years": [
        2026,
      ],
    },
  ],
}
`;
